--- a/README
+++ b/README
@@ -13,14 +13,15 @@ using some of the HTML5 Boilerplate's recommended markup and setup.
 It's constantly growing so be sure to check back often if you are a
 frequent user. I'm always open to contribution. :)
 
-Designed by Eddie Machado
-http://themble.com/bones
+Designed by Marco Terrinoni
+http://4-divisions.com
 
 License: WTFPL
 License URI: http://sam.zoy.org/wtfpl/
 Are You Serious? Yes.
 
 Special Thanks to:
+Eddie Machado for Bones
 Paul Irish & the HTML5 Boilerplate
 Yoast for some WP functions & optimization ideas
 Andrew Rogers for code optimization
