--- a/README
+++ b/README
@@ -21,7 +21,7 @@ License URI: http://sam.zoy.org/wtfpl/
 Are You Serious? Yes.
 
 Special Thanks to:
-Eddie Machado for Bones
+Eddie Machado for Making Bones
 Paul Irish & the HTML5 Boilerplate
 Yoast for some WP functions & optimization ideas
 Andrew Rogers for code optimization
