Updated Share Module
Changed selector IDs to Classes

--- a/README
+++ b/README
@@ -3,7 +3,7 @@ Bones
 A Lightweight Wordpress Development Theme
 
 _______________________________________________________________
-HEADS UP!!!
+HEADS UP!!
 Bones & Bones (Responsive Edition) have been merged.
 _______________________________________________________________
 
